<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/fragment_editor_canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        layout="@layout/component_canvas_editor"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_editor_top_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fragment_editor_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            style="@style/Widget.Material3.AppBarLayout"
            app:title="@string/fragment_editor_top_bar_title"
            app:navigationIcon="@drawable/ic_go_back"
            app:navigationIconTint="?attr/colorOnSurfaceVariant"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/fragment_editor_progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/fragment_editor_top_bar_container"
        app:layout_anchorGravity="bottom"
        android:indeterminate="true"
        android:visibility="gone"/>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/fragment_editor_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.Material3.BottomAppBar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_editor_button_main_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/fragment_editor_bottom_bar"
        android:layout_marginEnd="@dimen/default_screen_padding"
        app:srcCompat="@drawable/ic_surface"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>