<resources>
    <!--  General:  -->

    <string name="app_name">Move &amp; Draw</string>

    <!--  Components:  -->

    <string name="component_error_dialog_title">Error!</string>
    <string name="component_error_dialog_neutral_button_caption">OK</string>
    <string name="component_option_chooser_header_text">Choose by swiping</string>
    <string-array name="component_option_chooser_options_titles">
        <item>Go drawing</item>
        <item>Go viewing</item>
    </string-array>

    <string name="component_dialog_filename_input_header_text">New file</string>
    <string name="component_dialog_filename_input_description_text">Provide a new drawing file name</string>s
    <string name="component_dialog_filename_input_button_positive_caption">Confirm</string>
    <string name="component_dialog_filename_input_button_negative_caption">Cancel</string>

    <string name="component_dialog_color_picker_title">Pick your Color</string>
    <string name="component_dialog_color_picker_button_positive_caption">Confirm</string>
    <string name="component_dialog_color_picker_button_negative_caption">Cancel</string>

    <!-- Fragments: -->

    <string name="fragment_initial_header_title_text"><![CDATA[Move & Draw]]></string>
    <string name="fragment_initial_header_description_text">Create your own space.</string>
    <string name="fragment_initial_button_start_caption">Start</string>

    <string name="fragment_calibration_header_text_idle">Calibration</string>
    <string name="fragment_calibration_description_text_idle">Put your phone on any even surface and press the button.</string>
    <string name="fragment_calibration_button_start_caption_idle">Start</string>

    <string name="fragment_calibration_description_text_calibrating">Getting necessary data. Please,  wait for a while.</string>

    <string name="fragment_calibration_header_text_calibrated">You are ready!</string>
    <string name="fragment_calibration_description_text_calibrated">You are ready to go! Move your phone vertically and horizontally and click a button to make a point.</string>
    <string name="fragment_calibration_button_start_caption_calibrated">Let\'s go!</string>
    
    <string name="fragment_viewer_top_bar_title">Viewer</string>
    <string name="fragment_viewer_entry_message_text">Load a local drawing!</string>

    <string name="fragment_editor_top_bar_title">Editor</string>

    <!-- Messages -->
    
    <string name="fragment_editor_message_saved_image">Your drawing has been saved!</string>

</resources>