<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/editor_top_bar_main_group">
        <item
            android:id="@+id/editor_top_bar_save"
            android:icon="@drawable/ic_save"
            android:title="Save"
            android:contentDescription="Save the drawing locally"
            app:showAsAction="ifRoom"
            app:iconTint="?attr/colorOnSurfaceVariant"/>
    </group>
</menu>